# SSS-rs

./: .gitignore  .taplo.toml  Cargo.toml  Expected.html  How_to_construct_layout.md  README.md  README_ru.md  TODO.md  example_config.toml  example_generation_card.toml  rustfmt.toml
.cargo/: config.toml
.content/: umbrella_test_output.html
.github/workflows/: CI.yml  cli_release.yml  pages.yml
app-generator/: Cargo.toml
app-generator/src/component_layout/: html.rs  leptos.rs
card/: Cargo.toml
card/src/: component.rs  lib.rs  prelude.rs
card/src/component/: field.rs  frame.rs  icon.rs  link.rs  svg.rs  text.rs
card/tests/: components.rs
components/: Cargo.toml
components/src/: component.rs  icon.rs  lib.rs  prelude.rs  sections.rs
components/src/component/: frame.rs  icon.rs  link.rs  text.rs
components/src/sections/: icon.rs
components/tests/: components.rs
html-layouts-derive/: Cargo.toml  README.md
html-layouts-derive/src/: discovery.rs  generate.rs  generate_default_layouts.rs  lib.rs  types.rs
icon-derive/: Cargo.toml  Readme.md
icon-derive/src/: cache.rs  codegen.rs  input.rs  lib.rs  naming.rs
icon-derive/tests/: enum_api.rs  init.rs  leptos_api.rs  string_api.rs  svg_content.rs
icon-derive/tests/common/: mod.rs
layouts-derive/: Cargo.toml
layouts-derive/src/: lib.rs
parser/: Cargo.toml  example.json  example.toml  user.json  user.toml
parser/src/: error.rs  lib.rs  parse.rs  types.rs
parser/tests/: json.rs  toml.rs
render/: Cargo.toml  example.html
render/src/: component_layout.rs  format.rs  generate.rs  layout.rs  lib.rs  prelude.rs  theme.rs  theming.rs
render/src/component_layout/: html.rs  html_css.rs  leptos.rs
render/src/format/: css.rs  tailwindcss.rs
render/src/generate/: html.rs  html_css.rs  leptos.rs
render/src/layout/: umbrella.rs
render/src/theme/: umbrella.rs
render/tests/: generate.rs
sss/: Cargo.toml
sss-cli/: Cargo.toml  README.md
sss-cli/src/: main.rs  subcommands.rs  tools.rs  web.rs
sss-cli/src/cli/: args.rs  mod.rs  subcommands.rs
sss-cli/src/commands/: gen.rs  geneneration.rs  mod.rs  new.rs  run.rs
sss-cli/src/settings/: mod.rs  services.rs
sss-cli/src/web/: file_watcher.rs  mod.rs  serve.rs
sss-core/src/: lib.rs  prelude.rs  types.rs
sss-core/src/types/: nickname.rs  provider.rs  render.rs  user.rs
sss-core/tests/: component.rs
sss-lib/: README.md
sss-lib/parser/: Cargo.toml  limit.ron
sss-lib/parser/src/: error.rs  lib.rs  parse.rs
sss-lib/parser/tests/: json.rs  ron.rs  toml.rs
sss-lib/render/: Cargo.toml
sss-lib/render/src/: layout.rs  lib.rs  prelude.rs  render.rs  theme.rs
sss-lib/sss-core/: Cargo.toml
sss-lib/sss-core/src/: lib.rs  types.rs
sss-lib/sss-core/src/types/: link.rs  nickname.rs  provider.rs  since.rs  skill.rs  user.rs
sss-lib/sss-std/: Cargo.toml
sss-lib/sss-std/src/: converter.rs  lib.rs  prelude.rs  themes.rs  tools.rs
sss-lib/sss-std/src/converter/: pdf.rs  png.rs
sss-lib/sss-std/src/layouts/: default_layout.html.tera  html_tera_builder.rs  mod.rs  templates.rs
sss-lib/sss-std/src/layouts/templates/castle/: card.html.tera
sss-lib/sss-std/src/layouts/templates/github/: card.html.tera
sss-lib/sss-std/src/layouts/templates/umbrella/: card.html.tera
sss-lib/sss-std/src/layouts/umbrella/: card.rs  card_final.html.tera
sss-lib/sss-std/src/layouts/umbrella/tera/: card_final.html.tera
sss-lib/sss-std/tests/: layout.rs
sss-lib/theme/: Cargo.toml
sss-lib/theme/src/: lib.rs
sss-std/: Cargo.toml  README.md  card.css  card.html  card2.html  test_output.css  test_output.html
sss-std/src/: converter.rs  css_inject.rs  gen_css.rs  layouts.rs  lib.rs  prelude.rs  themes.rs  tools.rs
sss-std/src/converter/: pdf.rs  png.rs
sss-std/src/layouts/: mod.rs  umbrella.rs  umbrella_html.rs
sss-std/src/layouts/html_tera/: builder.rs  default_layout.html.tera  final_builder.rs  html_meta.rs  html_tera_builder.rs  mod.rs  tools.rs
sss-std/src/layouts/html_tera/final_templates/standart/: default_layout.html.tera
sss-std/src/layouts/html_tera/templates/castle/: card.html.tera  card.limitations.ron
sss-std/src/layouts/html_tera/templates/cyberpunk/: card.html.tera  card.limitations.ron
sss-std/src/layouts/html_tera/templates/github/: card.html.tera
sss-std/src/layouts/html_tera/templates/minimal/: card.html.tera  card.limitations.ron
sss-std/src/layouts/html_tera/templates/nature/: card.html.tera  card.limitations.ron
sss-std/src/layouts/html_tera/templates/retro/: card.html.tera  card.limitations.ron
sss-std/src/layouts/html_tera/templates/umbrella/: card.html.tera  card.limitations.ron
sss-std/src/layouts/umbrella/: card.rs  html.rs  html_tera.rs  img.rs  leptos.rs  mod.rs  pdf.rs
sss-std/src/layouts/umbrella/tera/: card.html.tera  card_final.html.tera  layout.html.tera
sss-std/src/theme/: umbrella.rs
sss-std/src/themes/: mod.rs  umbrella.rs
sss-std/tests/: layout.rs
sss-web-app/: Cargo.toml  README.md  deno.jsonc  index.html
sss-web-app/public/: index.css  styles.scss
sss-web-app/src/: lib.rs  main.rs  tools.rs
sss-web-app/src/components/: card_viewer.rs  mod.rs  reusable_components.rs  settings_builder.rs  tool_bar.rs  toster.rs
sss-web-app/src/components/reusable_components/: button.rs  input.rs  scrollablebox.rs  scrollxbar.rs  section.rs  selector.rs  stack.rs  text.rs  textarea.rs
sss-web-app/src/components/tool_bar/: download_button.rs  drop_button.rs  load_button.rs  restore_button.rs  save_button.rs
sss-web-app/src/pages/: card_editor.rs  home.rs  mod.rs
std/: Cargo.toml
std/src/format/: css.rs  umberella.rs
std/src/layout/: umbrella.rs
std/src/theme/: umbrella.rs
tailwindcss-validator/: Cargo.toml
tailwindcss-validator/src/: colors.rs  lib.rs  validator.rs
theme-generator/: Cargo.toml  Readme.md
theme-generator/src/: colors.rs  font.rs  lib.rs  node.rs  theme.rs
theme-generator/tests/: tree_gen.rs
