[workspace]
members = [
    "sss-lib/render",
    "sss-lib/parser",
    "sss-lib/theme",
    "sss-lib/sss-core",
    "sss-std",
    "sss-cli",
    "html-layouts-derive",
    "sss-web-app",
    "icon-derive",
]
resolver = "2"

[workspace.package]
version = "1.6.7"
edition = "2024"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
repository = "https://github.com/TOwInOK/SSS-rs"
license = "Apache-2.0"

[workspace.metadata.docs]
rs-doc-path = "docs"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
encre-css = "0.14.1"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
toml = "0.8.19"
utoipa = "5.3.1"
base64_light = "0.1.5"

[profile.dev]
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 'z'
debug = false
lto = true
codegen-units = 24
panic = 'abort'
strip = true
incremental = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
