[package]
name = "html-layouts-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
parser = { path = "../sss-lib/parser" }
sss_core = { path = "../sss-lib/sss-core" }

[lib]
proc-macro = true
