[package]
name = "tabler-icon-definer"
version = "2.0.4"
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tabler-icon-definer"
license = "MIT"
description = "Macros for fast incremental loading tabler icons"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
tabler-icon-definer = {path = ".", features = ["full"]}



[lib]
proc-macro = true

[features]
default = []
full = ["leptos"]
leptos = []
