[package]
name = "sss_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Local deps
sss_core = { path="../sss-lib/sss-core" }
sss_std = { path="../sss-lib/sss-std" }
render = { path="../sss-lib/render" }
parser = {path = "../sss-lib/parser"}
# Workspace deps
## errors
thiserror.workspace = true
anyhow.workspace = true
## async rt
tokio = { workspace = true, features = ["full"] }
## tracing
tracing.workspace = true
tracing-subscriber.workspace = true
## parsing
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
## cli
clap = { workspace = true, features = [ "derive"] }
# Local deps
## file checker
notify = "8.0.0"
## web server
axum = "0.8.1"
