[package]
name = "sss-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
leptos.workspace = true
render = { path = "../render" }
sss_core = { path = "../sss-core" }
tera = "1.20.0"
encre-css.workspace = true
