[package]
name = "sss_std"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
render = { path = "../sss-lib/render" }
theme = { path = "../sss-lib/theme" }
sss_core = { path = "../sss-lib/sss-core" }
html-layouts-derive = { path = "../html-layouts-derive" }
theme-generator = { path = "../theme-generator", features = ["utoipa"] }

tera = "1.20.0"
encre-css.workspace = true
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }

image = { version = "0.25.5", default-features = false, optional = true, features = [
    "png",
] }
headless_chrome = { version = "1.0.15", optional = true }
base64_light.workspace = true

utoipa = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sss_std = { path = ".", features = ["full"] }

[features]
default = []
full = ["image_generation", "utoipa"]
image_generation = ["dep:image", "dep:headless_chrome"]
utoipa = ["dep:utoipa"]
