[package]
name = "sss-web-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
console_log = "1"
log = "0.4"
base64_light.workspace = true
sss_core = { path = "../sss-lib/sss-core", features = ["leptos"] }
sss_std = { path = "../sss-std" }
render = { path = "../sss-lib/render" }
theme = { path = "../sss-lib/theme" }
toml.workspace = true
wasm-bindgen-futures = "0.4"
serde.workspace = true
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Navigator",
    "Clipboard",
    "Request",
    "Response",
    "RequestInit",
] }
codee = { version = "0.3", features = ["json_serde"] }
serde-wasm-bindgen = "0.6"
leptos-use = { version = "0.16", features = ["storage"] }
serde_json.workspace = true

[package.metadata.trunk]
target = "index.html"
dist = "dist"
public_url = "/"
filehash = true
inject_scripts = true

[package.metadata.trunk.serve]
addresses = ["0.0.0.0"]
port = 3000
open = false
[package.metadata.trunk.tools]
tailwindcss = "4.1.0"

[package.metadata.trunk.build]
minify = "on_release"
