[package]
name = "theme-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "Readme.md"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
theme = { path = "../sss-lib/theme" }
serde.workspace = true
clap.workspace = true

[lib]
proc-macro = true
