[package]
name = "sss_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = {workspace = true, optional = true}
tabler-icon-definer = { path = "../../icon-derive" }

[dev-dependencies]
# sss_core = { path = ".", features = ["full"] }

[features]
default = []
full = ["utoipa"]
utoipa = [
    "dep:utoipa"
]
