[package]
name = "sss_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = {workspace = true, optional = true }
leptos = { version= "0.7.5", optional = true }
tabler-icon-definer = { path = "../../icon-derive" }

[dev-dependencies]
# sss_core = { path = ".", features = ["full"] }

[features]
default = []
full = ["utoipa", "leptos"]
utoipa = [
    "dep:utoipa"
]
leptos = [
    "tabler-icon-definer/leptos",
    "dep:leptos"
]
