[package]
name = "sss_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, optional = true }
leptos = { workspace = true, optional = true }
tabler-icon-definer = { path = "../../icon-derive" }
parser = { path = "../parser" }

[dev-dependencies]
# sss_core = { path = ".", features = ["full"] }

[features]
default = []
full = ["utoipa", "leptos"]
utoipa = ["dep:utoipa"]
leptos = ["tabler-icon-definer/leptos", "dep:leptos"]
