[package]
name = "sss_std"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
render = { path = "../render" }
sss_core = { path = "../sss-core" }
layouts-derive = { path = "../../layouts-derive" }

tera = "1.20.0"
encre-css.workspace = true
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = [ "derive"] }

image = { version = "0.25.5", default-features = false, optional = true, features = ["png"] }
headless_chrome = { version = "1.0.15", optional = true }
base64_light = "0.1.5"

utoipa = {workspace = true, optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
sss_std = { path = ".", features = ["full"] }

[features]
default = []
full = ["image_generation", "utoipa"]
image_generation = [
    "dep:image",
    "dep:headless_chrome",
]
utoipa = [
    "dep:utoipa"
]
